--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "homepage": "https://github.com/AsbertMa/token-registry#readme",
   "dependencies": {
     "file-system": "2.2.2",
-    "hash-file": "3.0.0"
+    "hash-file": "3.0.0",
+    "sharp": "0.22.1"
   }
 }
