--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
   },
   "homepage": "https://github.com/AsbertMa/token-registry#readme",
   "dependencies": {
+    "axios": "^0.19.2",
+    "bignumber.js": "^9.0.0",
     "file-system": "2.2.2",
     "hash-file": "3.0.0",
     "sharp": "0.22.1"
