--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Install Dependencies
         run: npm ci
   
-      - name: Build Website
+      - name: Build distribution
         run: npm run build
 
       - name: Deploy To GH Pages
