--- a/package.json
+++ b/package.json
@@ -28,11 +28,11 @@
   },
   "homepage": "https://github.com/AsbertMa/token-registry#readme",
   "dependencies": {
-    "axios": "^0.19.2",
+    "axios": "^1.6.8",
     "bignumber.js": "^9.0.0",
     "file-system": "2.2.2",
     "hash-file": "3.0.0",
-    "sharp": "0.22.1",
-    "thor-devkit": "^1.3.3"
+    "sharp": "^0.32.6",
+    "thor-devkit": "^2.0.9"
   }
 }
