--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "file-system": "2.2.2",
     "hash-file": "3.0.0",
     "sharp": "^0.32.6",
-    "thor-devkit": "^2.0.9"
+    "thor-devkit": "^2.0.9",
+    "zod": "^3.24.4"
   }
 }
